navbar button fixed on iphone format

--- a/my-app/src/components/Topbar.css
+++ b/my-app/src/components/Topbar.css
@@ -362,7 +362,7 @@ a.dropdown-toggle .colorChange {
   }
 
   .navbar-collapse {
-    margin-top: -9px;
+    margin-top: 100px;
   }
 
   .nav-menu > .nav-btn > label > span {
